# wnba-player-props-pmf-model

./: .env.example  .gitignore  AGENTS.md  CNAME  Makefile  README.md  index.html  pyproject.toml  requirements.txt
.github/: daily_retrain.trigger  deploy_shell.trigger  oof_rebuild.trigger  p1_run.trigger
config/: certified_forecast_calibration.json  champion_manifest.json  data_registry.json  feature_ablation_maps_v1.json  feature_ablation_plan_v1.json  foundation_lock_change_pr73.json  foundation_lock_change_w0.json  foundation_lock_change_w0_3.json  foundation_lock_change_w0_4.json  foundation_lock_v1.json  injury_status_config.yaml  phase0_scope_exception.json  player_identity_aliases.json  player_overrides.json  prop_feature_blueprint_v1.json  prop_feature_map_candidate_v1.json  recommendation_policy.yaml  selected_production_package.json  stat_registry.json  tracking_hustle_schema_v1.json  wnba_model.yaml
docs/: API_FEATURE_PARITY_MAP.md  BEAT_MARKET_BLUEPRINT.md  CALIBRATION_CONTRACT.md  DAILY_QUERIES.md  DATA_DURABILITY.md  FEATURE_CONTRACT.md  FEATURE_OPTIMIZATION_AUDIT.md  FEATURE_OPTIMIZATION_RUNBOOK.md  FEATURE_SETS_QUICK_VIEW.md  FOUNDATION_LOCK.md  MODEL_PAPER.md  MODEL_SPEC_WNBA.md  NOVIG_OUTPUT_CONTRACT.md  OUTPUT_CONTRACT.md  PR1A_PROBABILITY_CALLSITE_AUDIT.md  PROP_FEATURE_OPTIMIZATION.md  calibration_methodology.md  clv_methodology.md  demo_readiness_2026-07-13.md  feature_point_in_time_policy.md  output_format.md  p1_forensic_report.md  p2_edge_invocation_audit.md  p3_corrected_gate_result.md  p3_forecasting_gates_preregistration.md  p3_full_recovery_result.md  p3_incident_309_root_cause.md  production_hardening.md
scripts/: apply_calibrators.py  apply_injury_news.py  apply_injury_updates.py  audit_feature_importance.py  audit_ingestion.py  audit_probability_consumers.py  backtest_clv.py  backtest_strategy.py  build_canonical_tables.py  build_clv_training_labels.py  build_edge_report.py  build_feature_ablation_maps.py  build_features.py  build_game_totals.py  build_historical_review.py  build_live_calibration_data.py  build_market_superiority_input.py  build_next_game_slate.py  build_oof_pmfs.py  build_scored_candidates.py  calibration_sanity_gate.py  check_calibration_drift.py  check_phase0_scope.py  collect_atomic_quotes.py  compare_champion_challenger.py  compute_combo_correlations_by_pos.py  compute_role_bias_corrections.py  compute_shap_explainability.py  data_registry_lib.py  debug_bdl_odds.py  evaluate_market_superiority.py  evaluate_pmf_calibration.py  explain_projection.py  export_betting_sheet.py  export_html_report.py  fetch_data.py  find_live_games.py  fit_binary_prob_calibrators.py  fit_calibrators.py  fit_shrinkage_params.py  (+61 more)
tests/: conftest.py  test_apply_injury_game_date_type.py  test_atomic_quotes.py  (+115 more)
(+303 files in other folders)
