[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wnba-props-pmf"
version = "0.1.0"
description = "WNBA player props PMF and game totals predictive model with role-aware calibration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "joblib>=1.3",
  "requests>=2.31",
  "pyyaml>=6.0",
  "typer>=0.9",
  "rich>=13.0",
  "pyarrow>=12.0"
]

[project.optional-dependencies]
lgbm = ["lightgbm>=4.0"]
dev = ["pytest>=7.0", "ruff>=0.3"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
