[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wnba-props-pmf"
version = "0.1.0"
description = "WNBA player props PMF and game totals predictive model with role-aware calibration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "joblib>=1.3",
  "requests>=2.31",
  "pyyaml>=6.0",
  "typer>=0.9",
  "rich>=13.0",
  "pyarrow>=12.0",
  "penaltyblog>=0.16",
  "hmmlearn>=0.3",
  "torch>=2.0",
  "shap>=0.44"
]

[project.optional-dependencies]
lgbm = ["lightgbm>=4.0"]
tuning = ["optuna>=3.0"]
dev = ["pytest>=7.0", "ruff>=0.3", "optuna>=3.0", "requests-mock>=1.9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
