[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wnba-props-pmf"
version = "0.1.0"
description = "WNBA player props PMF and game totals predictive model with role-aware calibration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "joblib>=1.3",
  "requests>=2.31",
  "pyyaml>=6.0",
  "typer>=0.9",
  "rich>=13.0",
  "pyarrow>=12.0",
  "penaltyblog>=0.16",
  "hmmlearn>=0.3",
  "shap>=0.44"
]

[project.optional-dependencies]
lgbm = ["lightgbm>=4.0"]
tuning = ["optuna>=3.0"]
dev = ["pytest>=7.0", "ruff>=0.3", "optuna>=3.0", "requests-mock>=1.9"]
# torch is optional: only required by wnba2vec (Enhancement 12b), which is
# guarded by try/except in build_features.py and is not called by any
# challenger training path. Install CPU-only if needed:
#   pip install torch>=2.0 --index-url https://download.pytorch.org/whl/cpu
neural = ["torch>=2.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
